update the color

--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -31,7 +31,7 @@
             <div class="left-side">
               <div class="profile-info">
                 <img src="img100.jpg" alt="image" />
-                <h3 style="color: #990f92ce">Asreen Ilyas</h3>
+                <h3 style="color: #1f4943">Asreen Ilyas</h3>
                 <span>Full-Stack Developer/ Webentwicklerin </span>
               </div>
               <h4 class="ltitle">Kontakt</h4>
@@ -110,10 +110,10 @@
           <div class="col-md-8 rt-div">
             <div class="rit-cover">
               <div class="hotkey">
-                <h1 class="" style="color: #990f92ce">Asreen Ilyas</h1>
+                <h1 class="" style="color: #1f4943">Asreen Ilyas</h1>
                 <small>Full-Stack Developer</small>
               </div>
-              <h2 class="rit-titl" style="color: #990f92ce">
+              <h2 class="rit-titl" style="color: #1f4943">
                 <i class="far fa-user"></i> Profile
               </h2>
               <div class="about">
@@ -132,14 +132,14 @@
                     <li>
                       <a
                         href="https://asreen.github.io/cv_portfolios/myPortfolioAsreen/index.html"
-                        style="color: #990f92ce"
-                        style="color: #990f92ce"
+                        style="color: #1f4943"
+                        style="color: #1f4943"
                         ><i class="fas fa-paper-plane"></i> Mein Portfolio
                       </a>
                     </li>
                     <li>
                       <a
-                        style="color: #990f92ce"
+                        style="color: #1f4943"
                         target="_blank"
                         href="https://asreen.github.io/cv_portfolios/mycv-2/Lebenslauf_Asreen.pdf"
                       >
@@ -151,11 +151,11 @@
                 </div>
               </div>
 
-              <h2 class="rit-titl" style="color: #990f92ce">
+              <h2 class="rit-titl" style="color: #1f4943">
                 <i class="fas fa-briefcase"></i> Berufserfahrong
               </h2>
               <div class="work-exp">
-                <h6 style="color: #990f92ce">
+                <h6 style="color: #1f4943">
                   Praktikum<span>Januar 2021-April 2021</span>
                 </h6>
                 <i>Active IT Recruitment</i>
@@ -163,21 +163,21 @@
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     Full-Stack-Entwicklerin
                   </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     3 monatiges Praktikum
                   </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     Zusätzliche Erfahrung: Folders und Files Structurieren,
                     Primereact etc.
@@ -186,7 +186,7 @@
               </div>
               <div class="work-exp">
                 <br />
-                <h6 style="color: #990f92ce">
+                <h6 style="color: #1f4943">
                   Webentwicklerin - Full-Stack Developer (MERN)
                   <span>Mar 2020-Mai 2021</span>
                 </h6>
@@ -198,7 +198,7 @@
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     Inhalte der Weiterbildung <br />
                     [Javascript, React, CSS3, Html5, Jquery, Bootstrap, AJAX,
@@ -208,14 +208,14 @@
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     Ein Jahr - Vollzeit
                   </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     mehrere kleine Projekte und ein umfangreiches
                     Abschlussprojekt
@@ -223,7 +223,7 @@
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i
                     >3 Monate Praktikum
                   </li>
@@ -231,7 +231,7 @@
               </div>
 
               <div class="work-exp">
-                <h6 style="color: #990f92ce">
+                <h6 style="color: #1f4943">
                   Computerlehrerin<span>2005-2016</span>
                 </h6>
                 <i>Irak -Ninawa</i>
@@ -239,21 +239,21 @@
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i>
                     In einer Gymnasiumschule
                   </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
-                      style="color: #990f92ce"
+                      style="color: #1f4943"
                     ></i
                     >EDV-kenntnisse / allgemeine Computerkenntnisse unterrichten
                   </li>
                 </ul>
               </div>
 
-              <h2 class="rit-titl" style="color: #990f92ce">
+              <h2 class="rit-titl" style="color: #1f4943">
                 <i class="fas fa-graduation-cap"></i> Studium -Bildung
               </h2>
               <div class="education">
@@ -277,7 +277,7 @@
                 </ul>
               </div>
 
-              <h2 class="rit-titl" style="color: #990f92ce">
+              <h2 class="rit-titl" style="color: #1f4943">
                 <i class="fas fa-users-cog"></i>Kompetenzen und Fähigkeiten
               </h2>
               <div class="profess-cover row no-margin">
