--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -141,7 +141,7 @@
                       <a
                         style="color: #1f4943"
                         target="_blank"
-                        href="https://asreen.github.io/cv_portfolios/mycv-2/Lebenslauf_Asreen.pdf"
+                        href="https://asreen.github.io/lebenslauf/mycv-2/index.html"
                       >
                         <i class="fas fa-cloud-download-alt"></i>Lebenslauf
                         herunterladen</a
