--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -152,7 +152,7 @@
               </div>
 
               <h2 class="rit-titl" style="color: #1f4943">
-                <i class="fas fa-briefcase"></i> Berufserfahrong
+                <i class="fas fa-briefcase"></i> Berufserfahrung 
               </h2>
               <div class="work-exp">
                 <h6 style="color: #1f4943">
