--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -141,7 +141,7 @@
                       <a
                         style="color: #1f4943"
                         target="_blank"
-                        href="https://asreen.github.io/lebenslauf/mycv-2/Lebenslauf_Asreen.pdf"
+                        href="https://asreen.github.io/lebenslauf/mycv-2/CV-My Cv.pdf"
                       >
                         <i class="fas fa-cloud-download-alt"></i>Lebenslauf
                         herunterladen</a
@@ -152,7 +152,7 @@
               </div>
 
               <h2 class="rit-titl" style="color: #1f4943">
-                <i class="fas fa-briefcase"></i> Berufserfahrung 
+                <i class="fas fa-briefcase"></i> Berufserfahrung
               </h2>
               <div class="work-exp">
                 <h6 style="color: #1f4943">
@@ -160,13 +160,6 @@
                 </h6>
                 <i>Active IT Recruitment</i>
                 <ul>
-                  <li>
-                    <i
-                      class="far fa-hand-point-right"
-                      style="color: #1f4943"
-                    ></i>
-                    Full-Stack-Entwicklerin
-                  </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
@@ -181,6 +174,35 @@
                     ></i>
                     Zusätzliche Erfahrung: Folders und Files Structurieren,
                     Primereact etc.
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Weiterentwicklung eines cloud-based CRM
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Erstellung einer Kandidaten-Datenbank
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Implementation einer Search-Funktionalität für die gesamte
+                    Datenbank (56.00 Datensätze)
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Anpassung aller Elemente in Responsiveness (Desktop, Tablet)
                   </li>
                 </ul>
               </div>
@@ -210,7 +232,7 @@
                       class="far fa-hand-point-right"
                       style="color: #1f4943"
                     ></i>
-                    Ein Jahr - Vollzeit
+                    Ein Jahr in Vollzeit
                   </li>
                   <li>
                     <i
@@ -241,14 +263,14 @@
                       class="far fa-hand-point-right"
                       style="color: #1f4943"
                     ></i>
-                    In einer Gymnasiumschule
+                    In einem Gymnasium
                   </li>
                   <li>
                     <i
                       class="far fa-hand-point-right"
                       style="color: #1f4943"
                     ></i
-                    >EDV-kenntnisse / allgemeine Computerkenntnisse unterrichten
+                    >EDV-Kenntnisse / allgemeine Computerkenntnisse unterrichten
                   </li>
                 </ul>
               </div>
@@ -264,11 +286,11 @@
                   </li>
                   <li class="col-md-6">
                     <span>2000-2004</span> <br />
-                    Bachelor grad-Computerwissenschaft - Musel University
+                    Bachelor Computerwissenschaft - Musel University
                   </li>
                   <li class="col-md-6">
                     <span>1993 -1999</span> <br />
-                    Secondarschule
+                    Sekondarschule
                   </li>
                   <li class="col-md-6">
                     <span>1987-1992</span> <br />
@@ -460,6 +482,7 @@
           </div>
         </div>
       </div>
+      <br />
     </div>
 
     <script
