--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -34,6 +34,7 @@
                 <h3 style="color: #1f4943">Asreen Ilyas</h3>
                 <span>Full-Stack Developer/ Webentwicklerin </span>
               </div>
+              <br />
               <h4 class="ltitle">Kontakt</h4>
               <div class="contact-box pb0">
                 <div class="icon">
@@ -67,9 +68,7 @@
               </div>
 
               <br />
-              <h4 class="ltitle">
-                <i class="fas fa-globe-americas"></i> Sprachen
-              </h4>
+              <h4 class="ltitle">Sprachen</h4>
               <div class="refer-cov">
                 <p>Arabisch (Muttersprache)</p>
               </div>
@@ -84,6 +83,7 @@
               <div class="refer-cov">
                 <p>Klasse-B</p>
               </div>
+              <br />
               <br />
               <h4 class="ltitle">Hobbys</h4>
               <ul class="hoby row no-margin">
@@ -239,6 +239,14 @@
                       class="far fa-hand-point-right"
                       style="color: #1f4943"
                     ></i>
+                    Full-Stack MERN App (Clean Code, MVC, Bug Fixing, Testing -
+                    Jest)
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
                     mehrere kleine Projekte und ein umfangreiches
                     Abschlussprojekt
                   </li>
@@ -305,7 +313,7 @@
               <div class="profess-cover row no-margin">
                 <div class="col-md-6">
                   <div class="prog-row row">
-                    <div class="col-sm-6">Javascript</div>
+                    <div class="col-sm-6">Javascript / TS</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -444,7 +452,7 @@
 
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Github</div>
+                    <div class="col-sm-6">Git / Github</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
