--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -37,27 +37,55 @@
               <br />
               <h4 class="ltitle">Kontakt</h4>
               <div class="contact-box pb0">
-                <div class="icon">
+                  <a
+                class="icon" style="color: white;"
+                  href="https://github.com/ASREEN/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                <div>
                   <i class="fab fa-github"></i>
                 </div>
+                </a>
                 <div class="detail">https://github.com/ASREEN/</div>
               </div>
               <div class="contact-box pb0">
-                <div class="icon">
+                 <a
+                class="icon" style="color: white;"
+                  href="mailto:asreen.ilyas44@gmail.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                <div>
                   <i class="fas fa-at"></i>
                 </div>
+                 </a>
                 <div class="detail">asreen.ilyas44@gmail.com</div>
               </div>
               <div class="contact-box">
-                <div class="icon">
+                  <a
+                class="icon" style="color: white;"
+                  href="https://www.xing.com/profile/Asreen_Ilyas/cv"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                <div>
                   <i class="fab fa-xing"></i>
                 </div>
+              </a>
                 <div class="detail">Asreen Ilyas</div>
               </div>
               <div class="contact-box">
-                <div class="icon">
-                  <i class="fab fa-linkedin"></i>
-                </div>
+                <a
+                class="icon" style="color: white;"
+                  href="https://www.linkedin.com/in/asreen-ilyas-31b10719a/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <div>
+                    <i class="fab fa-linkedin"></i>
+                  </div>
+                </a>
                 <div class="detail">Asreen Ilyas</div>
               </div>
               <div class="contact-box">
@@ -119,7 +147,7 @@
                 <p>
                   Ich bin Asreen Ilyas und komme aus dem Irak. Ich bin seit
                   ungefähr 5 Jahren hier in Deutschland und lebe zurzeit in
-                  Meerbusch-Neuss. Ich habe Computerwissenschaft in meinem
+                  Meerbusch-Neuss. Ich habe Computerwissenschaften in meinem
                   Heimatland studiert und mit sehr guten Noten abgeschlossen.
                   Vor allem bin ich teamfähig, hilfsbereit und ich erledige
                   meine Aufgaben sorgfältig. Außerdem bin ich neugierig und
@@ -143,8 +171,8 @@
                         href="https://asreen.github.io/lebenslauf/mycv-2/CV-My Cv.pdf"
                       >
                         <i class="fas fa-cloud-download-alt"></i>Lebenslauf
-                        herunterladen</a
-                      >
+                        herunterladen
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -312,7 +340,7 @@
               <div class="profess-cover row no-margin">
                 <div class="col-md-6">
                   <div class="prog-row row">
-                    <div class="col-sm-6">Javascript / TS</div>
+                    <div class="col-sm-6">Javascript/TS</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -329,7 +357,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="prog-row row">
-                    <div class="col-sm-6">React / Redux</div>
+                    <div class="col-sm-6">React/NextJS</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -346,7 +374,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">HTML5 / CSS3</div>
+                    <div class="col-sm-6">HTML5/CSS3/SASS</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -363,7 +391,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Node.js</div>
+                    <div class="col-sm-6">Node.js/Express.js</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -381,7 +409,7 @@
 
                 <div class="col-md-6">
                   <div class="prog-row row">
-                    <div class="col-sm-6">Bootstrap</div>
+                    <div class="col-sm-6">Bootstrap/Webpack</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -398,7 +426,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">MongoDB</div>
+                    <div class="col-sm-6">MongoDB/mongoose</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -416,13 +444,13 @@
 
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Express.js</div>
+                    <div class="col-sm-6">Postman/Jira</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
                           class="progress-bar"
                           role="progressbar"
-                          style="width: 75%"
+                          style="width: 95%"
                           aria-valuenow="25"
                           aria-valuemin="0"
                           aria-valuemax="100"
@@ -433,13 +461,13 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Jquery</div>
+                    <div class="col-sm-6">Jquery/Redux</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
                           class="progress-bar"
                           role="progressbar"
-                          style="width: 70%"
+                          style="width: 90%"
                           aria-valuenow="25"
                           aria-valuemin="0"
                           aria-valuemax="100"
@@ -451,7 +479,7 @@
 
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Git / Github</div>
+                    <div class="col-sm-6">Git/Github/VSC</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
