--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -35,6 +35,8 @@
                 <span>Full-Stack Developer/ Webentwicklerin </span>
               </div>
               <br />
+              <br />
+              <br />
               <h4 class="ltitle">Kontakt</h4>
               <div class="contact-box pb0">
                   <a
@@ -94,7 +96,8 @@
                 </div>
                 <div class="detail">Meerbusch-Neuss-NRW</div>
               </div>
-
+              <br />
+              <br />
               <br />
               <h4 class="ltitle">Sprachen</h4>
               <div class="refer-cov">
@@ -107,10 +110,14 @@
                 <p>Englisch (B2 Niveau)</p>
               </div>
               <br />
+              <br />
+              <br />
               <h4 class="ltitle">Führerschein</h4>
               <div class="refer-cov">
                 <p>Klasse-B</p>
               </div>
+              <br />
+              <br />
               <br />
               <h4 class="ltitle">Hobbys</h4>
               <ul class="hoby row no-margin">
@@ -181,6 +188,50 @@
               <h2 class="rit-titl" style="color: #1f4943">
                 <i class="fas fa-briefcase"></i> Berufserfahrung
               </h2>
+              <div class="work-exp">
+                <h6 style="color: #1f4943">
+                  Praktikum<span>18 Juni.2021- 31 August.2021</span>
+                </h6>
+                <i>Proximity Technology GmbH | BBDO Network</i>
+                <ul>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    2.5 monatiges Praktikum
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Zusätzliche Erfahrung: SQL-MariaDB, Javascript,
+                    Tomcat(Server - Side) etc.
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Lucom Software - Form erstellen
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                   Gitlab - Source Control
+                  </li>
+                  <li>
+                    <i
+                      class="far fa-hand-point-right"
+                      style="color: #1f4943"
+                    ></i>
+                    Testing
+                  </li>
+                </ul>
+              </div>
               <div class="work-exp">
                 <h6 style="color: #1f4943">
                   Praktikum<span>Januar 2021-April 2021</span>
