--- a/mycv-2/index.html
+++ b/mycv-2/index.html
@@ -337,21 +337,7 @@
                     Javascript/TS
                   </div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="prog-row row">
-                  <div class="col-sm-6">React/NextJS</div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    React/NextJS
                   </div>
                 </div>
               </div>
@@ -361,23 +347,7 @@
                     HTML5/CSS3/SASS
                   </div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="row prog-row">
-                  <div class="col-sm-6">
                     Node.js/Express.js
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -388,23 +358,7 @@
                     Bootstrap/Webpack
                   </div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="row prog-row">
-                  <div class="col-sm-6">
                     MongoDB/MariaDB
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -413,21 +367,7 @@
                 <div class="row prog-row">
                   <div class="col-sm-6">Postman/Jira</div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="row prog-row">
-                  <div class="col-sm-6">React/Redux/Jquery</div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    React/Redux/Jquery
                   </div>
                 </div>
               </div>
@@ -438,24 +378,7 @@
                     Git/Github/Gitlab
                   </div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <div class="row prog-row">
-                  <div class="col-sm-6">
                     Rest-API/AJAX
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -466,24 +389,7 @@
                     Tomcat/Jenkins
                   </div>
                   <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <div class="prog-row row">
-                  <div class="col-sm-6">
                     IntelliJ/VSC
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
                   </div>
                 </div>
               </div>
